--- a/reportes.html
+++ b/reportes.html
@@ -1088,39 +1088,46 @@
             </a>
         </div>
 
-       <nav class="sidebar-nav">
-    <div class="nav-section">
-        <div class="nav-section-title">Principal</div>
-        <a href="productos.html" class="nav-item">
-            <span class="nav-icon">📦</span>
-            <span>Productos</span>
-        </a>
-        <a href="pedidos.html" class="nav-item">
-            <span class="nav-icon">🍽️</span>
-            <span>Pedidos</span>
-        </a>
-        <a href="gastos.html" class="nav-item">
-            <span class="nav-icon">🧾</span>
-            <span>Gastos</span>
-        </a>
-        <a href="qr-generator.html" class="nav-item">
-            <span class="nav-icon">📱</span>
-            <span>QR Generador</span>
-        </a>
-        <a href="reportes.html" class="nav-item active">
-            <span class="nav-icon">📊</span>
-            <span>Reportes</span>
-        </a>
-        <a href="historial-pedidos.html" class="nav-item">
-            <span class="nav-icon">📜</span>
-            <span>Historial</span>
-        </a>
-        <a href="catalogo-productos.html" class="nav-item">
-            <span class="nav-icon">📜📦</span>
-            <span>Inventario</span>
-        </a>
-    </div>
-
+     <nav class="sidebar-nav">
+            <div class="nav-section">
+                <div class="nav-section-title">Principal</div>
+                <a href="productos.html" class="nav-item">
+                    <span class="nav-icon">📦</span>
+                    <span>Productos</span>
+                </a>
+                <a href="pedidos.html" class="nav-item">
+                    <span class="nav-icon">🍽️</span>
+                    <span>Pedidos</span>
+                </a>
+                <a href="gastos.html" class="nav-item">
+                    <span class="nav-icon">🧾</span>
+                    <span>Gastos</span>
+                </a>
+                <a href="qr-generator.html" class="nav-item">
+                    <span class="nav-icon">📱</span>
+                    <span>QR Generador</span>
+                </a>
+                <a href="reportes.html" class="nav-item">
+                    <span class="nav-icon">📊</span>
+                    <span>Reportes</span>
+                </a>
+                <a href="historial-pedidos.html" class="nav-item">
+                    <span class="nav-icon">📜</span>
+                    <span>Historial</span>
+                </a>
+                <a href="catalogo-productos.html" class="nav-item">
+                    <span class="nav-icon">📜📦</span>
+                    <span>Inventario</span>
+                </a>
+                <a href="alimentos.html" class="nav-item">
+                    <span class="nav-icon">🥘</span>
+                    <span>Alimentos</span>
+                </a>
+                <a href="inventario-alimentos.html" class="nav-item active">
+                    <span class="nav-icon">📋</span>
+                    <span>Inventario Alimentos</span>
+                </a>
+            </div>
     <!-- SOLO PARA ADMINISTRADORES -->
     <div class="nav-section" id="adminSection" style="display: none;">
         <div class="nav-section-title">Administración</div>
