--- a/alimentos.html
+++ b/alimentos.html
@@ -839,11 +839,11 @@
                     <span class="nav-icon">📜📦</span>
                     <span>Inventario</span>
                 </a>
-                <a href="alimentos.html" class="nav-item">
+                <a href="alimentos.html" class="nav-item active" >
                     <span class="nav-icon">🥘</span>
                     <span>Alimentos</span>
                 </a>
-                <a href="inventario-alimentos.html" class="nav-item active">
+                <a href="inventario-alimentos.html" class="nav-item ">
                     <span class="nav-icon">📋</span>
                     <span>Inventario Alimentos</span>
                 </a>
