--- a/catalogo-productos.html
+++ b/catalogo-productos.html
@@ -667,7 +667,7 @@
                 <div class="nav-section-title">Principal</div>
                 <a href="productos.html" class="nav-item">
                     <span class="nav-icon">📦</span>
-                    <span>Productos</span>
+                    <span>Platos</span>
                 </a>
                 <a href="pedidos.html" class="nav-item">
                     <span class="nav-icon">🍽️</span>
@@ -689,15 +689,15 @@
                     <span class="nav-icon">📜</span>
                     <span>Historial</span>
                 </a>
-                <a href="catalogo-productos.html" class="nav-item">
+                <a href="catalogo-productos.html" class="nav-item active">
                     <span class="nav-icon">📜📦</span>
-                    <span>Inventario</span>
+                    <span>todos los platos</span>
                 </a>
                 <a href="alimentos.html" class="nav-item">
                     <span class="nav-icon">🥘</span>
                     <span>Alimentos</span>
                 </a>
-                <a href="inventario-alimentos.html" class="nav-item active">
+                <a href="inventario-alimentos.html" class="nav-item ">
                     <span class="nav-icon">📋</span>
                     <span>Inventario Alimentos</span>
                 </a>
