--- a/gastos.html
+++ b/gastos.html
@@ -837,13 +837,13 @@
                 <div class="nav-section-title">Principal</div>
                 <a href="productos.html" class="nav-item">
                     <span class="nav-icon">📦</span>
-                    <span>Productos</span>
+                    <span>Platos</span>
                 </a>
                 <a href="pedidos.html" class="nav-item">
                     <span class="nav-icon">🍽️</span>
                     <span>Pedidos</span>
                 </a>
-                <a href="gastos.html" class="nav-item">
+                <a href="gastos.html" class="nav-item active">
                     <span class="nav-icon">🧾</span>
                     <span>Gastos</span>
                 </a>
@@ -861,13 +861,13 @@
                 </a>
                 <a href="catalogo-productos.html" class="nav-item">
                     <span class="nav-icon">📜📦</span>
-                    <span>Inventario</span>
+                    <span>Todos los productos</span>
                 </a>
                 <a href="alimentos.html" class="nav-item">
                     <span class="nav-icon">🥘</span>
                     <span>Alimentos</span>
                 </a>
-                <a href="inventario-alimentos.html" class="nav-item active">
+                <a href="inventario-alimentos.html" class="nav-item ">
                     <span class="nav-icon">📋</span>
                     <span>Inventario Alimentos</span>
                 </a>
