--- a/inventario-alimentos.html
+++ b/inventario-alimentos.html
@@ -662,7 +662,7 @@
                 <div class="nav-section-title">Principal</div>
                 <a href="productos.html" class="nav-item">
                     <span class="nav-icon">📦</span>
-                    <span>Productos</span>
+                    <span>Platos</span>
                 </a>
                 <a href="pedidos.html" class="nav-item">
                     <span class="nav-icon">🍽️</span>
@@ -686,7 +686,7 @@
                 </a>
                 <a href="catalogo-productos.html" class="nav-item">
                     <span class="nav-icon">📜📦</span>
-                    <span>Inventario</span>
+                    <span>Todos los platos</span>
                 </a>
                 <a href="alimentos.html" class="nav-item">
                     <span class="nav-icon">🥘</span>
