--- a/historial-liquidaciones.html
+++ b/historial-liquidaciones.html
@@ -729,7 +729,7 @@
                 <div class="nav-section-title">Principal</div>
                 <a href="productos.html" class="nav-item">
                     <span class="nav-icon">📦</span>
-                    <span>Productos</span>
+                    <span>Platos</span>
                 </a>
                 <a href="pedidos.html" class="nav-item">
                     <span class="nav-icon">🍽️</span>
@@ -749,7 +749,7 @@
                 </a>
                 <a href="historial-pedidos.html" class="nav-item">
                     <span class="nav-icon">📜</span>
-                    <span>Historial</span>
+                    <span>Todos los platos</span>
                 </a>
                 <a href="catalogo-productos.html" class="nav-item">
                     <span class="nav-icon">📜📦</span>
@@ -759,7 +759,7 @@
                     <span class="nav-icon">🥘</span>
                     <span>Alimentos</span>
                 </a>
-                <a href="inventario-alimentos.html" class="nav-item active">
+                <a href="inventario-alimentos.html" class="nav-item ">
                     <span class="nav-icon">📋</span>
                     <span>Inventario Alimentos</span>
                 </a>
