--- a/liquidacion.html
+++ b/liquidacion.html
@@ -947,7 +947,7 @@
         <div class="nav-section-title">Principal</div>
         <a href="productos.html" class="nav-item">
             <span class="nav-icon">📦</span>
-            <span>Productos</span>
+            <span>Platos</span>
         </a>
         <a href="pedidos.html" class="nav-item">
             <span class="nav-icon">🍽️</span>
@@ -971,7 +971,7 @@
         </a>
         <a href="catalogo-productos.html" class="nav-item">
             <span class="nav-icon">📜📦</span>
-            <span>Inventario</span>
+            <span>Todos los platos</span>
         </a>
     </div>
 
