apariencia de el side var

--- a/administrador.html
+++ b/administrador.html
@@ -952,7 +952,7 @@
                 <div class="nav-section-title">Principal</div>
                 <a href="productos.html" class="nav-item">
                     <span class="nav-icon">📦</span>
-                    <span>Productos</span>
+                    <span>Platos</span>
                 </a>
                 <a href="pedidos.html" class="nav-item">
                     <span class="nav-icon">🍽️</span>
