--- a/gastos.html
+++ b/gastos.html
@@ -832,7 +832,7 @@
             </a>
         </div>
 
-     <nav class="sidebar-nav">
+    <nav class="sidebar-nav">
             <div class="nav-section">
                 <div class="nav-section-title">Principal</div>
                 <a href="productos.html" class="nav-item">
@@ -851,17 +851,17 @@
                     <span class="nav-icon">📱</span>
                     <span>QR Generador</span>
                 </a>
-                <a href="reportes.html" class="nav-item">
+                <a href="reportes.html" class="nav-item ">
                     <span class="nav-icon">📊</span>
                     <span>Reportes</span>
                 </a>
-                <a href="historial-pedidos.html" class="nav-item">
+                <a href="historial-pedidos.html" class="nav-item ">
                     <span class="nav-icon">📜</span>
                     <span>Historial</span>
                 </a>
                 <a href="catalogo-productos.html" class="nav-item">
                     <span class="nav-icon">📜📦</span>
-                    <span>Todos los productos</span>
+                    <span>Todos los platos</span>
                 </a>
                 <a href="alimentos.html" class="nav-item">
                     <span class="nav-icon">🥘</span>
@@ -872,6 +872,7 @@
                     <span>Inventario Alimentos</span>
                 </a>
             </div>
+
 
     <!-- SOLO PARA ADMINISTRADORES -->
     <div class="nav-section" id="adminSection" style="display: none;">
