--- a/alimentos.html
+++ b/alimentos.html
@@ -813,7 +813,7 @@
                 <div class="nav-section-title">Principal</div>
                 <a href="productos.html" class="nav-item">
                     <span class="nav-icon">📦</span>
-                    <span>Productos</span>
+                    <span>Platos</span>
                 </a>
                 <a href="pedidos.html" class="nav-item">
                     <span class="nav-icon">🍽️</span>
