--- a/productos.html
+++ b/productos.html
@@ -424,12 +424,12 @@
             </a>
         </div>
 
-     <nav class="sidebar-nav">
+<nav class="sidebar-nav">
             <div class="nav-section">
                 <div class="nav-section-title">Principal</div>
-                <a href="productos.html" class="nav-item">
+                <a href="productos.html" class="nav-item active">
                     <span class="nav-icon">📦</span>
-                    <span>Productos</span>
+                    <span>Platos</span>
                 </a>
                 <a href="pedidos.html" class="nav-item">
                     <span class="nav-icon">🍽️</span>
@@ -443,27 +443,28 @@
                     <span class="nav-icon">📱</span>
                     <span>QR Generador</span>
                 </a>
-                <a href="reportes.html" class="nav-item">
+                <a href="reportes.html" class="nav-item ">
                     <span class="nav-icon">📊</span>
                     <span>Reportes</span>
                 </a>
-                <a href="historial-pedidos.html" class="nav-item">
+                <a href="historial-pedidos.html" class="nav-item ">
                     <span class="nav-icon">📜</span>
                     <span>Historial</span>
                 </a>
                 <a href="catalogo-productos.html" class="nav-item">
                     <span class="nav-icon">📜📦</span>
-                    <span>Inventario</span>
+                    <span>Todos los platos</span>
                 </a>
                 <a href="alimentos.html" class="nav-item">
                     <span class="nav-icon">🥘</span>
                     <span>Alimentos</span>
                 </a>
-                <a href="inventario-alimentos.html" class="nav-item active">
+                <a href="inventario-alimentos.html" class="nav-item ">
                     <span class="nav-icon">📋</span>
                     <span>Inventario Alimentos</span>
                 </a>
             </div>
+
     <!-- SOLO PARA ADMINISTRADORES -->
     <div class="nav-section" id="adminSection" style="display: none;">
         <div class="nav-section-title">Administración</div>
