modificacion me mbate

--- a/administrador.html
+++ b/administrador.html
@@ -949,6 +949,11 @@
 
      <nav class="sidebar-nav">
             <div class="nav-section">
+
+                                <div class="nav-section-title">mas programs de JC</div>
+                                <a href="https://jc-portafolio1.netlify.app" class="menu-link" target="_blank"> 📱 Mas programas de JC</a>
+
+
                 <div class="nav-section-title">Principal</div>
                 <a href="productos.html" class="nav-item">
                     <span class="nav-icon">📦</span>
